# linkr

./: .env  .gitignore  Cargo.toml  Rocket.toml  readme.md
docs/: creating-links.md  deleting-links.md  getting-started.md
docs/auth/: no-auth.md  overview.md  preshared_key.md
migrations/2019-01-27-194600_create_users/: up.sql
migrations/2019-01-27-203438_create_links/: down.sql  up.sql
migrations/2019-01-27-203438_create_owner_and_links/: down.sql  up.sql
src/: main.rs  models.rs  schema.rs
src/api/: admin.rs  link.rs  mod.rs  user.rs
src/auth/: DefaultAuth.rs  default_auth.rs  mod.rs  no_auth.rs  preshared_key.rs  single_user.rs
static/css/: main.css
templates/: index.html.hbs
templates/includes/: base.hbs  footer.hbs  header.hbs
tools/: psk_create_link  psk_delete_link
