[package]
name = "linkr"
version = "0.2.0"
authors = ["Edward Shen <code@eddie.sh>"]
edition = "2018"

description = "Lightweight self-hosted personal link shortening and renaming service"
repository = "https://github.com/edward-shen/linkr"

readme = "readme.md"
license = "AGPL-3.0-or-later"

[dependencies]
chrono = { version = "0.4.6", features = ["serde"] }
diesel = { version = "1.0.0", features = ["postgres", "chrono"] }
diesel_migrations = "1.4.0"
dotenv = "0.13.0"
hmac = "0.7.0"
lazy_static = "1.3.0"
rocket = "0.4.0"
rocket_contrib = { version = "0.4.0", default-features = false, features = ["diesel_postgres_pool", "json"] }
serde = { version = "1.0.89", features = ["derive"] }
sha2 = "0.8.0"
